[project]
name = "photoprocessor"
version = "0.1.0"
description = "Allows processing of photos using a database by reading them from a folder"
authors = [
    {name = "Fo3nix",email = "97182469+Fo3nix@users.noreply.github.com"}
]
readme = "README.md"
packages = [
    { include = "photoprocessor" }
]

requires-python = ">=3.12, <4.0"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow-heif (>=1.0.0,<2.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
#    "python-magic-bin (>=0.4.14,<0.5.0)",
    "timezonefinder (>=8.0.0,<9.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "rawpy (>=0.25.1,<0.26.0)",
    "python-magic (>=0.4.27,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
